Fix home page font and databases-page z-index

--- a/frontend/src/app/databases-page/databases-page.component.scss
+++ b/frontend/src/app/databases-page/databases-page.component.scss
@@ -1,5 +1,7 @@
 section{
   padding:30px 0px;
+  position: absolute;
+  z-index: -10;
 
   .container{
     max-width: 100%;
