--- a/frontend/src/app/home-page/home-page.component.scss
+++ b/frontend/src/app/home-page/home-page.component.scss
@@ -31,11 +31,10 @@ section {
       left: 50%;
       transform: translate(-50%, -50%);
       font: {
-        family: Roboto;
+        family: 'Roboto', sans-serif;
         size: 50px;
       }
       color: white;
-      font-family: 'Playfair Display SC', serif;
     }
 
     button{
